--- a/src/Resources/Sass/leftSideBar.scss
+++ b/src/Resources/Sass/leftSideBar.scss
@@ -1,5 +1,5 @@
 .left_bar {
-    height: 100%;
+    max-width: 340px;
     background: linear-gradient(360deg, #010b1e 0.88%, #020b1c 99.9%);
     mix-blend-mode: normal;
     opacity: 0.91;
