--- a/src/Resources/Css/home.css
+++ b/src/Resources/Css/home.css
@@ -1,7 +1,19 @@
+.home {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 1fr 10%;
+      grid-template-columns: 20% 1fr 10%;
+  -ms-grid-rows: 1fr 10%;
+      grid-template-rows: 1fr 10%;
+  height: 100vh;
+}
+
 .home section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
 }
 /*# sourceMappingURL=home.css.map */
