--- a/src/Resources/Css/player.css
+++ b/src/Resources/Css/player.css
@@ -1,6 +1,9 @@
 footer {
-  max-height: 160px;
-  height: 140px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 2;
+  grid-row: 2;
   width: 100%;
   position: fixed;
   bottom: 0;
