--- a/src/Resources/Css/leftSideBar.css
+++ b/src/Resources/Css/leftSideBar.css
@@ -1,10 +1,56 @@
 .left_bar {
-  max-width: 340px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  grid-row: 1;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0.88%, #010b1e), color-stop(99.9%, #020b1c));
   background: linear-gradient(360deg, #010b1e 0.88%, #020b1c 99.9%);
   mix-blend-mode: normal;
   opacity: 0.91;
   -webkit-backdrop-filter: blur(30.1256px);
           backdrop-filter: blur(30.1256px);
+  padding: 10px 50px;
+}
+
+.left_bar .logo {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.left_bar .logo img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.left_bar .navigation {
+  height: 100%;
+  color: #fff;
+}
+
+.left_bar .navigation .original .side_option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 10px;
+  cursor: pointer;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+
+.left_bar .navigation .original .side_option:hover {
+  color: #46db70;
+}
+
+.left_bar .navigation .original .side_option span {
+  margin-left: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=leftSideBar.css.map */
