--- a/src/Resources/Sass/leftSideBar.scss
+++ b/src/Resources/Sass/leftSideBar.scss
@@ -6,8 +6,11 @@
     opacity: 0.91;
     backdrop-filter: blur(30.1256px);
     padding: 10px 50px;
+    display: flex;
+    flex-direction: column;
 
     .logo {
+        // height: 10%;
         margin-bottom: 30px;
         text-align: center;
 
@@ -18,7 +21,7 @@
     }
 
     .navigation {
-        height: 100%;
+        // height: 100%;
         color: #fff;
 
         .side_option {
@@ -40,7 +43,7 @@
             }
         }
 
-        .library {
+        .option {
             margin-top: 20px;
             .title {
                 display: flex;
@@ -55,6 +58,11 @@
                     text-transform: uppercase;
                     font-weight: 400;
                 }
+            }
+
+            &:last-child .scroll {
+                height: 300px !important;
+                overflow-y: scroll;
             }
         }
     }
