--- a/src/Resources/Css/player.css
+++ b/src/Resources/Css/player.css
@@ -11,5 +11,6 @@ footer {
   opacity: 0.98;
   -webkit-backdrop-filter: blur(135.679px);
           backdrop-filter: blur(135.679px);
+  color: #b3b3b3;
 }
 /*# sourceMappingURL=player.css.map */
