--- a/src/Resources/Css/index.css
+++ b/src/Resources/Css/index.css
@@ -23,4 +23,10 @@ p {
 ::-webkit-scrollbar {
   display: none;
 }
+
+img {
+  width: auto;
+  max-height: 100%;
+  display: inline-block;
+}
 /*# sourceMappingURL=index.css.map */
