--- a/src/Resources/Sass/main.scss
+++ b/src/Resources/Sass/main.scss
@@ -1,5 +1,22 @@
 .main {
     grid-column: 2/4;
     grid-row: 1;
-    background-color: lightgreen;
+    background: #020916;
+    color: #fff;
+    padding: 10px 15px;
+
+    .featured {
+        &__title {
+            border-bottom: 1px solid #808080;
+            font-weight: bold;
+            text-transform: capitalize;
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+        }
+        &__playlists {
+            display: flex;
+            justify-content: space-between;
+            gap: 30px;
+        }
+    }
 }
