finish styling playlist

--- a/src/Resources/Css/card.css
+++ b/src/Resources/Css/card.css
@@ -24,14 +24,38 @@
 
 .card .cover .mask {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   top: 0;
+  -webkit-transform: scale(0);
+          transform: scale(0);
   -webkit-transition: -webkit-transform 0.5s ease-in-out;
   transition: -webkit-transform 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+}
+
+.card .cover .mask svg {
+  font-size: 3em;
+  opacity: 0.6;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.card .cover .mask svg:hover {
+  opacity: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  color: #46db70;
 }
 
 .card .cover:hover .mask {
