--- a/src/Resources/Sass/card.scss
+++ b/src/Resources/Sass/card.scss
@@ -1,3 +1,5 @@
+// @import 'varriables';
+
 .card {
     display: flex;
     flex-direction: column;
@@ -14,12 +16,27 @@
 
         .mask {
             position: absolute;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
             width: 100%;
             height: 100%;
             background-color: rgba(#000, 0.4);
             top: 0;
-            // transform: scale(0);
+            transform: scale(0);
             transition: transform 0.5s ease-in-out;
+
+            svg {
+                font-size: 3em;
+                opacity: 0.6;
+                transition: all 0.5s ease;
+
+                &:hover {
+                    opacity: 1;
+                    transform: scale(1.1);
+                    color: #46db70;
+                }
+            }
         }
         &:hover .mask {
             transform: scale(1) rotate(360deg);
