--- a/src/Resources/Css/index.css
+++ b/src/Resources/Css/index.css
@@ -29,4 +29,9 @@ img {
   max-height: 100%;
   display: inline-block;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
 /*# sourceMappingURL=index.css.map */
