--- a/src/Resources/Css/main.css
+++ b/src/Resources/Css/main.css
@@ -7,6 +7,7 @@
   background: #020916;
   color: #fff;
   padding: 10px 15px;
+  position: relative;
 }
 
 .main .featured__title {
@@ -25,5 +26,17 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   gap: 30px;
+}
+
+.main .loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-100%, -50%);
+          transform: translate(-100%, -50%);
+}
+
+.main .loading svg {
+  color: #46db70;
 }
 /*# sourceMappingURL=main.css.map */
