--- a/src/Resources/Sass/Login.scss
+++ b/src/Resources/Sass/Login.scss
@@ -1,3 +1,5 @@
+@import 'varriables';
+
 .login {
     width: 100%;
     height: 100vh;
@@ -16,7 +18,7 @@
     a {
         min-width: 280px;
         max-width: 300px;
-        background-color: #1db954;
+        background-color: $spotify;
         color: #fff;
         padding: 20px;
         border-radius: 99px;
