--- a/src/Resources/Sass/main.scss
+++ b/src/Resources/Sass/main.scss
@@ -1,9 +1,12 @@
+@import 'varriables';
+
 .main {
     grid-column: 2/4;
     grid-row: 1;
     background: #020916;
     color: #fff;
     padding: 10px 15px;
+    position: relative;
 
     .featured {
         &__title {
@@ -17,6 +20,16 @@
             display: flex;
             justify-content: space-between;
             gap: 30px;
+        }
+    }
+    .loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-100%, -50%);
+
+        svg {
+            color: $spotify;
         }
     }
 }
