--- a/src/Resources/Sass/card.scss
+++ b/src/Resources/Sass/card.scss
@@ -48,6 +48,8 @@
     .details {
         text-transform: capitalize;
         font-weight: 700;
+        color: #fff;
+        text-align: center;
 
         .description {
             margin-top: 5px;
