--- a/src/Resources/Sass/categories.scss
+++ b/src/Resources/Sass/categories.scss
@@ -1,23 +1,38 @@
 .categories {
-    grid-column: 2/4;
-    background: #000;
-    display: flex;
-    gap: 25px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 20px 25px;
+    // grid-column: 2/4;
+    // background: #000;
+
+    &__header {
+        text-transform: capitalize;
+        font-weight: 700;
+        color: #fff;
+        padding: 20px 25px;
+        letter-spacing: 1.5px;
+    }
+
+    &__items {
+        display: flex;
+        gap: 25px;
+        flex-wrap: wrap;
+        padding: 20px 25px;
+    }
 
     .card {
-        img {
-            max-width: fit-content;
+        display: inline-block;
+
+        a {
+            display: inline-block;
         }
         .details {
-            height: 15%;
-            display: grid;
-            place-items: center;
+            position: absolute;
+            bottom: 28%;
+            left: 50%;
+            transform: translateX(-60%);
+            border-bottom: transparent;
+            transition: all 0.4s linear;
         }
-        .mask svg {
-            color: #fff;
+        &:hover .details {
+            border-bottom: 1px solid #fff;
         }
     }
 }
