--- a/src/Resources/Css/main.css
+++ b/src/Resources/Css/main.css
@@ -1,16 +1,9 @@
 .main {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 1;
-  grid-row: 1;
-  background: #020916;
-  color: #fff;
-  padding: 10px 15px;
+  padding: 20px 15px;
   position: relative;
 }
 
-.main .featured__title {
+.featured__title {
   border-bottom: 1px solid #808080;
   font-weight: bold;
   text-transform: capitalize;
@@ -18,7 +11,7 @@
   padding-bottom: 10px;
 }
 
-.main .featured__playlists {
+.featured__playlists {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
