--- a/src/Resources/Css/menu.css
+++ b/src/Resources/Css/menu.css
@@ -1,9 +1,25 @@
 .menu {
-  top: -186px !important;
+  position: absolute !important;
   padding: 10px 15px;
+  max-width: 260px;
+  background: #000;
+  color: #fff;
   text-transform: capitalize;
   line-height: 2em;
   font-size: 18px;
   z-index: 20;
+}
+
+.menu__sub {
+  background: #000;
+  width: 100%;
+  -webkit-box-shadow: -2px 1px 8px 0px #808080;
+          box-shadow: -2px 1px 8px 0px #808080;
+  margin: 0 20px;
+  display: none;
+}
+
+.menu nav[class*='submenu']:hover nav {
+  display: inline-block;
 }
 /*# sourceMappingURL=menu.css.map */
