--- a/src/Resources/Sass/menu.scss
+++ b/src/Resources/Sass/menu.scss
@@ -1,8 +1,23 @@
 .menu {
-    top: -186px !important;
+    position: absolute !important;
     padding: 10px 15px;
+    max-width: 260px;
+    background: #000;
+    color: #fff;
     text-transform: capitalize;
     line-height: 2em;
     font-size: 18px;
     z-index: 20;
+
+    &__sub {
+        background: #000;
+        width: 100%;
+        box-shadow: -2px 1px 8px 0px #808080;
+        margin: 0 20px;
+
+        display: none;
+    }
+    nav[class*='submenu']:hover nav {
+        display: inline-block;
+    }
 }
