right sidebar(freind) component styles

--- a/src/Resources/Sass/_common.scss
+++ b/src/Resources/Sass/_common.scss
@@ -1,5 +1,6 @@
 .main {
-    grid-column: 2/4;
+    // grid-column: 2/4;
+    grid-column: 2/3;
     grid-row: 1;
     background: #020916;
     color: #fff;
