--- a/src/Resources/Css/home.css
+++ b/src/Resources/Css/home.css
@@ -1,8 +1,8 @@
 .home {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 20% 1fr 10%;
-      grid-template-columns: 20% 1fr 10%;
+  -ms-grid-columns: 20% 1fr;
+      grid-template-columns: 20% 1fr;
   -ms-grid-rows: 1fr 10%;
       grid-template-rows: 1fr 10%;
   height: 100vh;
