--- a/src/Resources/Sass/_common.scss
+++ b/src/Resources/Sass/_common.scss
@@ -1,7 +1,12 @@
 .main {
-    // grid-column: 2/4;
-    grid-column: 2/3;
+    grid-column: 2/-1;
     grid-row: 1;
     background: #020916;
     color: #fff;
+
+    display: flex;
+
+    & > div:first-child {
+        flex: 1;
+    }
 }
