--- a/src/Resources/Css/index.css
+++ b/src/Resources/Css/index.css
@@ -39,13 +39,20 @@ a {
 }
 
 .main {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
+  grid-column: 2/-1;
   -ms-grid-row: 1;
   grid-row: 1;
   background: #020916;
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main > div:first-child {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .loading {
