--- a/src/Resources/Css/card.css
+++ b/src/Resources/Css/card.css
@@ -38,10 +38,10 @@
   top: 0;
   -webkit-transform: scale(0);
           transform: scale(0);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  transition: -webkit-transform 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  -webkit-transition: -webkit-transform 0.5s 0.1s ease-in-out;
+  transition: -webkit-transform 0.5s 0.1s ease-in-out;
+  transition: transform 0.5s 0.1s ease-in-out;
+  transition: transform 0.5s 0.1s ease-in-out, -webkit-transform 0.5s 0.1s ease-in-out;
 }
 
 .card .cover .mask svg {
