--- a/src/Resources/Sass/card.scss
+++ b/src/Resources/Sass/card.scss
@@ -24,7 +24,7 @@
             background-color: rgba(#000, 0.4);
             top: 0;
             transform: scale(0);
-            transition: transform 0.5s ease-in-out;
+            transition: transform 0.5s 0.1s ease-in-out;
 
             svg {
                 font-size: 3em;
