--- a/src/Resources/Css/player.css
+++ b/src/Resources/Css/player.css
@@ -11,7 +11,8 @@ footer {
 }
 
 footer .control {
-  margin: auto;
+  margin: 0 auto;
+  width: 28%;
   max-width: 280px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,5 +79,67 @@ footer .song .info .texts {
 footer .song .info .texts span {
   display: inline-block;
   margin-bottom: 8px;
+}
+
+.control_container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.control_container .timebar {
+  position: relative;
+  height: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+
+.control_container .timebar span {
+  letter-spacing: 1px;
+  width: 3%;
+}
+
+.control_container .timebar input {
+  -webkit-appearance: none !important;
+  width: 94%;
+  height: 100%;
+  outline: none;
+  border-radius: 50px;
+  background: -webkit-gradient(linear, left top, right top, from(#46db70), color-stop(0%, #46db70), color-stop(0%, #3c3c3c), to(#3c3c3c));
+  background: linear-gradient(to right, #46db70 0%, #46db70 0%, #3c3c3c 0%, #3c3c3c 100%);
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.control_container .timebar input::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  width: 12px;
+  height: 12px;
+  margin-left: -4px;
+  margin-top: -3px;
+  border-radius: 50%;
+  background-color: #e9e9e9;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
+.control_container:hover input::-webkit-slider-thumb {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 /*# sourceMappingURL=player.css.map */
