--- a/src/Resources/Sass/leftSideBar.scss
+++ b/src/Resources/Sass/leftSideBar.scss
@@ -2,10 +2,11 @@
 
 .left_bar {
     grid-column: 1/2;
-    grid-row: 1;
+    // grid-row: 1;
     background: linear-gradient(360deg, #010b1e 0.88%, #020b1c 99.9%);
     mix-blend-mode: normal;
     opacity: 0.91;
+    height: 100vh;
     backdrop-filter: blur(30.1256px);
     padding: 10px 50px;
     display: flex;
