--- a/src/Resources/Sass/main.scss
+++ b/src/Resources/Sass/main.scss
@@ -1,8 +1,10 @@
 .main {
-    padding-left: 15px;
     position: relative;
+    height: 100vh;
+    overflow-y: scroll;
 }
 .featured {
+    padding: 20px 15px 0;
     &__title {
         border-bottom: 1px solid #808080;
         font-weight: bold;
