--- a/src/Resources/Css/leftSideBar.css
+++ b/src/Resources/Css/leftSideBar.css
@@ -2,12 +2,11 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
-  -ms-grid-row: 1;
-  grid-row: 1;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0.88%, #010b1e), color-stop(99.9%, #020b1c));
   background: linear-gradient(360deg, #010b1e 0.88%, #020b1c 99.9%);
   mix-blend-mode: normal;
   opacity: 0.91;
+  height: 100vh;
   -webkit-backdrop-filter: blur(30.1256px);
           backdrop-filter: blur(30.1256px);
   padding: 10px 50px;
