--- a/src/Resources/Sass/player.scss
+++ b/src/Resources/Sass/player.scss
@@ -7,9 +7,11 @@ footer {
     grid-row: 2;
     width: 100%;
 
+    position: fixed;
+    bottom: 0;
+
     background: linear-gradient(360deg, #020814 1.05%, #030d20 99.15%);
     mix-blend-mode: normal;
-    opacity: 0.98;
     color: #b3b3b3;
 
     .control {
@@ -75,6 +77,7 @@ footer {
 .control_container {
     height: 100%;
     display: flex;
+    gap: 15px;
     flex-direction: column;
     justify-content: space-between;
 
