--- a/src/Resources/Css/index.css
+++ b/src/Resources/Css/index.css
@@ -56,6 +56,9 @@ a {
 }
 
 .loading {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   position: absolute;
   top: 50%;
   left: 50%;
