--- a/src/Resources/Sass/home.scss
+++ b/src/Resources/Sass/home.scss
@@ -1,6 +1,5 @@
 .home {
+    position: relative;
     display: grid;
     grid-template-columns: 20% 1fr;
-    // grid-template-rows: 1fr 10%;
-    // height: 100vh;
 }
