--- a/src/Resources/Css/player.css
+++ b/src/Resources/Css/player.css
@@ -51,6 +51,8 @@ footer .song {
 }
 
 footer .song .cover {
+  position: relative;
+  cursor: pointer;
   width: 64px;
   height: 64px;
 }
@@ -65,6 +67,7 @@ footer .song .cover img {
 }
 
 footer .song .info {
+  width: 100%;
   margin-left: 12px;
   position: relative;
 }
@@ -78,8 +81,50 @@ footer .song .info .texts {
 }
 
 footer .song .info .texts span {
-  display: inline-block;
+  display: block;
   margin-bottom: 8px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+div.cover:hover::before {
+  -webkit-transform: rotate(90deg) scale(1);
+          transform: rotate(90deg) scale(1);
+}
+
+div.cover_expand:hover::before {
+  -webkit-transform: rotate(-90deg) scale(1);
+          transform: rotate(-90deg) scale(1);
+}
+
+.cover_expand {
+  cursor: pointer;
+  position: fixed;
+  bottom: 9%;
+}
+
+.song .cover::before,
+.song_expand .cover_expand::before {
+  content: '';
+  background: url(/Images/less-than.png) #000 no-repeat center;
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  width: 30px;
+  height: 30px;
+  -webkit-transform: rotate(0) scale(0);
+          transform: rotate(0) scale(0);
+  border-radius: 50%;
+  -webkit-transition: -webkit-transform 500ms ease-out;
+  transition: -webkit-transform 500ms ease-out;
+  transition: transform 500ms ease-out;
+  transition: transform 500ms ease-out, -webkit-transform 500ms ease-out;
+}
+
+.song .cover::before {
+  width: 20px;
+  height: 20px;
 }
 
 .control_container {
