--- a/src/Resources/Sass/player.scss
+++ b/src/Resources/Sass/player.scss
@@ -43,6 +43,8 @@ footer {
         overflow: hidden;
 
         .cover {
+            position: relative;
+            cursor: pointer;
             width: 64px;
             height: 64px;
 
@@ -54,7 +56,9 @@ footer {
                 object-fit: cover;
             }
         }
+
         .info {
+            width: 100%;
             margin-left: 12px;
             position: relative;
 
@@ -66,12 +70,47 @@ footer {
                 bottom: 0;
 
                 span {
-                    display: inline-block;
+                    display: block;
                     margin-bottom: 8px;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                 }
             }
         }
     }
+}
+div.cover:hover::before {
+    transform: rotate(90deg) scale(1);
+}
+
+div.cover_expand:hover::before {
+    transform: rotate(-90deg) scale(1);
+}
+
+.cover_expand {
+    cursor: pointer;
+    position: fixed;
+    bottom: 9%;
+}
+
+.song .cover::before,
+.song_expand .cover_expand::before {
+    content: '';
+    background: url(/Images/less-than.png) #000 no-repeat center;
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    width: 30px;
+    height: 30px;
+    transform: rotate(0) scale(0);
+    border-radius: 50%;
+    transition: transform 500ms ease-out;
+}
+
+.song .cover::before {
+    width: 20px;
+    height: 20px;
 }
 
 .control_container {
