fix some bugs and remove unnesessary lines

--- a/src/Resources/Css/main.css
+++ b/src/Resources/Css/main.css
@@ -1,6 +1,9 @@
 .main {
   position: relative;
   height: 100vh;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   overflow-y: scroll;
 }
 
