--- a/src/Resources/Css/index.css
+++ b/src/Resources/Css/index.css
@@ -73,4 +73,16 @@ a {
 .err {
   color: red;
 }
+
+.not_found {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=index.css.map */
